--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ Version 2.1
 = UI Changes
 - Changed height of main element to scale with view window height
 - Added toggles to settings dialouge for jump buttons
+- Pinned settings toggle to code list
 = Miscellaneous
 - RE codes resolve to RJ conterparts as dlsite english merged with jp site
 
