--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,11 +4,14 @@ Version 2.1.1
   - Ci-en articles will preview the first embed image in the article post
     Articles without images and creator pages will preview the creator's banner
     The ci-en not found accorn is used as a fallback
+- Added support for dlsite circle previews
+  - Previews are a 2x2 grid of circle's most recent 4 works
+    Previews are restricted by the geoblock
 - Added site labels to grid previews
 = Bugfix
 - Fixed previews not displaying on desuarchive. They have a stricter CSP.
 - Fixed dlsite circle link generation, missing forward slash
-
+- Fixed dlsite circle code detection, now works with 8 digit codes
 
 Version 2.1.0
 = New managment
