--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+Version 2.1.2.1
+= Bugfix
+- Fixed cien creator pages not selecting header image when article preview contains image
+- Fixed an improper application of css rules to created hyperlinks
+
 Version 2.1.2
 = Features
 - Added filter to ignore posts containing more than a configurable amount of matches
