settings text color

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,7 @@
+Version 2.1.2.3
+= UI Changes
+- Settings box text will now be colored based on background color to attempt to guarantee contrast
+
 Version 2.1.2.2
 = UI Changes
 - Site labels now line up with image edge
