--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,10 @@
+Version 2.1.3.1
+= Bugfix
+- Regex: fixed matches not being made if s* and v* codes are preceded with non-alphanumeric characters
+= Miscellaneous
+- Added gitgud.io @match directive, script will now run on gitgud.io
+- Added console logging for resources that fail to be fetched
+
 Version 2.1.3
 = Features
 - Support for vndb release pages
